--- a/public/style.css
+++ b/public/style.css
@@ -513,11 +513,6 @@ html {
   margin-right: auto;
 }
 
-.my-auto{
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
 .mr-2{
   margin-right: 0.5rem;
 }
@@ -560,22 +555,6 @@ html {
 
 .w-1\/2{
   width: 50%;
-}
-
-.w-20{
-  width: 5rem;
-}
-
-.w-60{
-  width: 15rem;
-}
-
-.w-16{
-  width: 4rem;
-}
-
-.w-40{
-  width: 10rem;
 }
 
 .w-24{
@@ -653,11 +632,6 @@ html {
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
-.bg-emerald-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
-}
-
 .bg-gradient-to-r{
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -670,11 +644,6 @@ html {
 .from-purple-400{
   --tw-gradient-from: #c084fc;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(192 132 252 / 0));
-}
-
-.from-emerald-500{
-  --tw-gradient-from: #10b981;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(16 185 129 / 0));
 }
 
 .from-emerald-300{
@@ -706,12 +675,12 @@ html {
   --tw-gradient-to: #ef4444;
 }
 
-.to-red-400{
-  --tw-gradient-to: #f87171;
+.p-8{
+  padding: 2rem;
 }
 
-.p-10{
-  padding: 2.5rem;
+.p-6{
+  padding: 1.5rem;
 }
 
 .py-2{
@@ -809,9 +778,9 @@ html {
   line-height: 2.5rem;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold{
@@ -893,11 +862,6 @@ html {
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-red-500:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
 .hover\:underline:hover{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -948,10 +912,6 @@ html {
     width: 50%;
   }
 
-  .md\:w-2\/6{
-    width: 33.333333%;
-  }
-
   .md\:flex-row{
     flex-direction: row;
   }
@@ -962,6 +922,10 @@ html {
 
   .md\:justify-between{
     justify-content: space-between;
+  }
+
+  .md\:p-10{
+    padding: 2.5rem;
   }
 
   .md\:px-\[7\%\]{
@@ -996,6 +960,11 @@ html {
   .md\:text-5xl{
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .md\:shadow-transparent{
