--- a/public/style.css
+++ b/public/style.css
@@ -783,6 +783,11 @@ html {
   line-height: 1.5rem;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
