--- a/public/style.css
+++ b/public/style.css
@@ -549,6 +549,14 @@ html {
   height: 12rem;
 }
 
+.h-36{
+  height: 9rem;
+}
+
+.h-28{
+  height: 7rem;
+}
+
 .w-full{
   width: 100%;
 }
@@ -561,8 +569,20 @@ html {
   width: 6rem;
 }
 
+.w-80{
+  width: 20rem;
+}
+
+.w-72{
+  width: 18rem;
+}
+
 .cursor-pointer{
   cursor: pointer;
+}
+
+.flex-row{
+  flex-direction: row;
 }
 
 .flex-col{
@@ -595,6 +615,10 @@ html {
 
 .gap-20{
   gap: 5rem;
+}
+
+.gap-14{
+  gap: 3.5rem;
 }
 
 .overflow-hidden{
@@ -636,6 +660,10 @@ html {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
+.bg-gradient-to-tr{
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+}
+
 .from-purple-500{
   --tw-gradient-from: #a855f7;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(168 85 247 / 0));
@@ -649,6 +677,21 @@ html {
 .from-emerald-300{
   --tw-gradient-from: #6ee7b7;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(110 231 183 / 0));
+}
+
+.from-indigo-500{
+  --tw-gradient-from: #6366f1;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(99 102 241 / 0));
+}
+
+.from-purple-300{
+  --tw-gradient-from: #d8b4fe;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(216 180 254 / 0));
+}
+
+.from-orange-300{
+  --tw-gradient-from: #fdba74;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(253 186 116 / 0));
 }
 
 .to-indigo-400{
@@ -673,6 +716,18 @@ html {
 
 .to-red-500{
   --tw-gradient-to: #ef4444;
+}
+
+.to-orange-400{
+  --tw-gradient-to: #fb923c;
+}
+
+.to-red-300{
+  --tw-gradient-to: #fca5a5;
+}
+
+.to-blue-400{
+  --tw-gradient-to: #60a5fa;
 }
 
 .p-8{
@@ -786,6 +841,15 @@ html {
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-\[28px\]{
+  font-size: 28px;
 }
 
 .font-bold{
@@ -917,6 +981,10 @@ html {
     width: 50%;
   }
 
+  .md\:w-2\/6{
+    width: 33.333333%;
+  }
+
   .md\:flex-row{
     flex-direction: row;
   }
@@ -970,6 +1038,21 @@ html {
   .md\:text-xl{
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .md\:shadow-transparent{
